update api react
